--- a/src/NeoToolKits/ExcelDataUploadConfigPopDialog.ui
+++ b/src/NeoToolKits/ExcelDataUploadConfigPopDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>319</width>
-    <height>189</height>
+    <width>312</width>
+    <height>284</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -94,7 +94,17 @@
     </widget>
    </item>
    <item>
+    <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QCheckBox" name="checkBox_ErrorStop">
+       <property name="text">
+        <string>遇到错误时，终止操作</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
@@ -107,13 +117,6 @@
         </size>
        </property>
       </spacer>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="checkBox_ErrorStop">
-       <property name="text">
-        <string>遇到错误时，终止操作</string>
-       </property>
-      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_StartOrStop">
