--- a/src/NeoToolKits/MainWindowDialog.ui
+++ b/src/NeoToolKits/MainWindowDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindowDialog</string>
+   <string>ToolKits</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1">
