数据库配置界面功能实现

--- a/src/NeoToolKits/UI/Form/MysqlInfoPopDialog.ui
+++ b/src/NeoToolKits/UI/Form/MysqlInfoPopDialog.ui
@@ -172,7 +172,7 @@
      <item>
       <widget class="QPushButton" name="btn_ok">
        <property name="text">
-        <string>确定</string>
+        <string>保存</string>
        </property>
       </widget>
      </item>
