--- a/src/NeoToolKits/UI/Form/DbScriptEditorPageForm.ui
+++ b/src/NeoToolKits/UI/Form/DbScriptEditorPageForm.ui
@@ -178,10 +178,17 @@
     </layout>
    </item>
    <item>
-    <widget class="QTableView" name="tableView_DBDataTable"/>
+    <widget class="DBScriptDataTableView" name="tableView_DBDataTable"/>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>DBScriptDataTableView</class>
+   <extends>QTableView</extends>
+   <header>DBScriptDataTableView.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
