--- a/src/NeoToolKits/UI/Form/DBScriptTestItemsEditorPopDialog.ui
+++ b/src/NeoToolKits/UI/Form/DBScriptTestItemsEditorPopDialog.ui
@@ -28,10 +28,43 @@
        <height>70</height>
       </size>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
-    <widget class="QTableView" name="tableView"/>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="btn_add">
+       <property name="text">
+        <string>添加</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_delete">
+       <property name="text">
+        <string>删除</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_apply">
+       <property name="text">
+        <string>应用</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QTableView" name="tableView_TestItems"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -51,7 +84,7 @@
      <item>
       <widget class="QPushButton" name="btn_ok">
        <property name="text">
-        <string>确定</string>
+        <string>保存</string>
        </property>
       </widget>
      </item>
