实现DBScriptTestItemsEditorPopDialog的数据刷新与保存

--- a/src/NeoToolKits/UI/Form/DBScriptTestItemsEditorPopDialog.ui
+++ b/src/NeoToolKits/UI/Form/DBScriptTestItemsEditorPopDialog.ui
@@ -41,6 +41,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
+      <widget class="QPushButton" name="btn_refresh">
+       <property name="text">
+        <string>刷新</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btn_add">
        <property name="text">
         <string>添加</string>
