--- a/src/NeoToolKits/UI/Form/DBScriptTestItemsEditorPopDialog.ui
+++ b/src/NeoToolKits/UI/Form/DBScriptTestItemsEditorPopDialog.ui
@@ -34,7 +34,7 @@
       </font>
      </property>
      <property name="readOnly">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
    </item>
