增加数据库数据查询与导出到Excel工具
开发中。。。

--- a/src/NeoToolKits/MainWindowDialog.qrc
+++ b/src/NeoToolKits/MainWindowDialog.qrc
@@ -1,7 +1,9 @@
 <RCC>
-  <qresource prefix="/MainWindowDialog">
-    <file>rc/1.ico</file>
-    <file>rc/2.png</file>
-    <file>rc/NeoToolKits.ico</file>
-  </qresource>
+    <qresource prefix="/MainWindowDialog">
+        <file>rc/1.ico</file>
+        <file>rc/2.png</file>
+        <file>rc/NeoToolKits.ico</file>
+        <file>rc/3.png</file>
+        <file>rc/font-awesome/fontawesome-webfont.ttf</file>
+    </qresource>
 </RCC>
